# stock-alter

./: .dockerignore  .gitignroe  .pre-commit-config.yaml  .prefectignore  CHANGELOG.md  Dockerfile  Makefile  README.md  bulk.md  docker-compose.yml  prefect.yaml  pyproject.toml  run_test.py
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-failing-test.md  3-docs-bug.md  4-feature-request.md  6-security-report.md  7-question-support.md  [New Request] New Data Source.md  config.yml
.github/workflows/: stock-alter-actions.yml
.prefect/: flows.json
admin/: onboarding.sh
dags/alphaVantage/: extract.py
dags/deploy/: prefect.yaml
dags/extract/: alphaVantageAPI.py  alphaVantageapi_extract.py  newsapi_extract.py
extract/: secret_api.py
extract/news/src/: api.py  execute.py
extract/rightmove/src/: api.py
finnhubProducer/: FinnhubProducer.py
infra/live/stage/: main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf  variables.tfvars  varibles.tfvars
issue_templates/: Triage Guidelines.md
mlruns/0/: meta.yaml
secrets/: alphavantage  finnhub  gcp_key.json  prefect_key
spark/: stock_spark.py
src/: nose2.cfg  run_test.py
src/stock_alerter/: alter.py  cartonization.py  legacy.py  processor.py  reader.py  readme.txt  rule.py  stock.py  timeseries.py
src/stock_alerter/tests/: test_action.py  test_alert.py  test_cartonization.py  test_doctest.py  test_legacy.py  test_priceRule.py  test_reader.py  (+3 more)
src/test/: test_stock.py
stock_alerter/: action.py  event.py  legacy.py  logs.py  main.py  rule.py  trading.py
stock_alerter/tests/: test_action.py  test_event.py  test_stock.py  test_timeseries.py
twitterImpact/: analysis.py  benchmark.py  twitter.py
