[tool.poetry]
name = "stock-alter"
version = "0.1.0"
description = ""
authors = ["kang wang <kangqiwang@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^2.14.11"
prefect-gcp = "^0.5.5"
requests = "^2.31.0"
pandas = "^2.1.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
